--- a/src/styles.scss
+++ b/src/styles.scss
@@ -587,3 +587,12 @@ ul.p-dropdown-items {
   display: flex;
   align-items: center;
 }
+
+// .p-inputtext { 
+//   padding: 4px 10px;
+// }
+
+.p-dropdown-panel .p-dropdown-items .p-dropdown-item{
+  padding: 7px 15px;
+  font-size: 15px !important;
+}
