--- a/src/app/core/dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/core/dashboard/admin-dashboard/admin-dashboard.component.html
@@ -837,7 +837,7 @@
         </div>
       </div>
       <div class="col-md-9">
-        <div class="p-2 card" style="overflow-y: auto">
+        <div class="p-2 card" style="overflow-y: auto; height: 480px;">
           <div class="pLeftpRight py-2 d-flex justify-content-between">
             <h3>Customer Credit Alerts</h3>
           </div>
