--- a/src/app/core/settings/settings.component.html
+++ b/src/app/core/settings/settings.component.html
@@ -109,9 +109,9 @@
                     >Taxes</a
                   >
                 </li>
-                <!-- <li class="nav-item pe-2" [ngClass]="{'active': this.currentRoute===routes.unitsList}">
-                                    <a class="nav-link " [routerLink]="routes.unitsList">Units</a>
-                                </li> -->
+                <li class="nav-item pe-2" [ngClass]="{'active': this.currentRoute===routes.unitsList}">
+                                    <a class="nav-link " [routerLink]="routes.visitReasons">visitReasons</a>
+                                </li>
               </ul>
             </div>
           </div>
