--- a/src/app/core/settings/taxes/taxes-list/taxes-list.component.html
+++ b/src/app/core/settings/taxes/taxes-list/taxes-list.component.html
@@ -1,9 +1,9 @@
 <p-toast></p-toast>
 <div class="">
-    <!-- Page Content -->
-    <div class=" container-fluid">
-        <!-- Page Header -->
-        <!-- <div class="page-header">
+  <!-- Page Content -->
+  <div class="container-fluid">
+    <!-- Page Header -->
+    <!-- <div class="page-header">
             <div class="row">
                 <div class="col-sm-12">
                     <ul class="breadcrumb">
@@ -16,45 +16,9 @@
                 </div>
             </div>
         </div> -->
-        <!-- /Page Header -->
+    <!-- /Page Header -->
 
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="card card-table show-entire">
-                    <div class="card-body">
-                        <div class="page-table-header mb-2">
-                            <div class="row align-items-center">
-                                <div class="col">
-                                    <div class="doctor-table-blk">
-                                        <h3>Tax List</h3>
-                                        <div class="doctor-search-blk">
-                                            <div class="top-nav-search table-search-blk">
-                                                <input type="text" class="form-control" placeholder="Search here"
-                                                    [(ngModel)]="searchDataValue">
-                                                <a class="btn"><img src="assets/img/icons/search-normal.svg" alt=""></a>
-                                            </div>
-                                            <div class="add-group textbtn">
-                                                <a appShowHide [roles]="['admin', 'super-admin']"
-                                                    (click)="openAddDialog()"
-                                                    class="btn btn-primary add-pluss ms-2"><img
-                                                        src="assets/img/icons/plus.svg" alt=""> Add New</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-auto text-end float-end ms-auto download-grp" appShowHide
-                                    [roles]="['admin', 'super-admin']">
-                                    <!-- <a href="javascript:;" class=" me-2"><img src="assets/img/icons/pdf-icon-01.svg"
-                                            pTooltip="Download data in PDF file" tooltipPosition="left"
-                                            tooltipStyleClass="tooltip" alt=""></a> -->
-                                    <a href="javascript:;" class=" me-2"><img src="assets/img/icons/pdf-icon-03.svg"
-                                            pTooltip="Download data in CSV file " tooltipPosition="left"
-                                            tooltipStyleClass="tooltip" alt="" (click)="dt.exportCSV()"></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-body p-2">
-                            <p-table [value]="taxesListData | filter:searchDataValue:['name', 'taxRate',]"
+    <!-- <p-table [value]="taxesListData | filter:searchDataValue:['name', 'taxRate',]"
                                 styleClass="p-datatable-striped" [tableStyle]="{'min-width': '60rem'}"
                                 [paginator]="taxesListData?.length >= 5" [rows]="10" selectionMode="multiple"
                                 [rowsPerPageOptions]="[5, 10, 20]" (onPage)="onPageChange($event)"
@@ -105,14 +69,25 @@
                                         <td colspan="3" class="text-center">No taxes found.</td>
                                     </tr>
                                 </ng-template>
-                            </p-table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+                            </p-table> -->
+    <app-table
+      *ngIf="taxesListData"
+      [columnSettingWithItemsKeys]="columnSettingWithItemsKeys"
+      [itemList]="taxesListData"
+      [onDeleteButtonShow]="true"
+      [onEditButtonShow]="true"
+      [pageTitle]="'Taxs List'"
+      (navigateTo)="handleNavigation()"
+      (handleEmitEditTo)="handleEdit($event)"
+      (handleEmitDeleteTo)="handleDelete($event)"
+      [sheetNames]="'Tax List'"
+    ></app-table>
+  </div>
 </div>
 
-<app-confirm-dialog [showDialog]="showDialog" (callbackModal)="callBackModal()" (close)="close()"
-    [data]="modalData"></app-confirm-dialog>
+<app-confirm-dialog
+  [showDialog]="showDialog"
+  (callbackModal)="callBackModal()"
+  (close)="close()"
+  [data]="modalData"
+></app-confirm-dialog>
